<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">部落冲突攻略</string>
    <string name="detail_title">攻略详情</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">按大本营等级过滤内容</string>
    <string name="no_newer_news">暂无新文章</string>
    <string name="tips_not_desc">请输入问题或建议</string>
    <string name="tips_received">已收到你的反馈</string>
    <!-- pull to refresh-->
    <string name="pull_label"></string>
    <string name="release_label"></string>
    <string name="refresh_label"></string>

    <string name="th_level_0">不过滤内容</string>
    <string name="th_level_7">1-7 本</string>
    <string name="th_level_8">8 本</string>
    <string name="th_level_9">9 本</string>
    <string name="th_level_10">10 本</string>

    <string name="tower_hall_select">选择大本营等级</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="back">返回</string>
    <string name="share_to">分享到</string>

    <string name="feedback_title">帮我们做得更好</string>

    <string name="ga_category_home">home</string>
    <string name="ga_category_tag">tag</string>
    <string name="ga_action_click">click</string>
    <string name="ga_action_scroll">scroll</string>
    <string name="ga_action_show">scroll</string>
    <string name="ga_action_pulldown">pulldown</string>
    <string name="ga_label_filter">filter</string>
    <string name="ga_label_loadmore">loadmore</string>

    <string name="loading_video">正在加载视频...</string>
</resources>
