<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HomeActivity">
    <item android:id="@+id/drawer_indicator" android:title="@string/action_filter" android:icon="@drawable/ic_action_filter"
        android:orderInCategory="100" app:showAsAction="always" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:checked="true" android:id="@+id/th_level_0" android:title="@string/th_level_0" />
                <item android:id="@+id/th_level_7" android:title="@string/th_level_7" />
                <item android:id="@+id/th_level_8" android:title="@string/th_level_8" />
                <item android:id="@+id/th_level_9" android:title="@string/th_level_9" />
                <item android:id="@+id/th_level_10" android:title="@string/th_level_10" />
            </group>
        </menu>
    </item>
</menu>
